testsuite/tests/properties/invalid_abstract/abstract_overrides.lkt
# Check that abstract properties not overriden in concrete nodes are rejected

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- list+(
        or(Number(@Number) | Identifier(@Identifier))
    )
}

class FooNode implements Node[FooNode] {
}

@abstract class BaseNode: FooNode {
    @exported @abstract fun prop(): Bool
}

class Identifier: BaseNode {
    @abstract fun prop(): Bool
}

class Number: BaseNode {
    @abstract fun prop(): Bool
}
